--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -39,7 +39,8 @@
                 h2 {
                     text-transform: capitalize;
                     font-family: $font-ubuntu;
-                    font-weight: 500;
+                    font-family: $font-title;
+                    font-weight: 400;
                     font-size: 1.5rem;
                     margin-bottom: .5rem;
                 }
