--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -116,6 +116,7 @@
             left: 5vw;
 
             @media (min-width: 600px) {
+                top: 10vh;
                 // max-width: 50%;
                 // display: flex;
                 // flex-direction: column;
@@ -194,7 +195,7 @@
         // end of animated h1 
         // welcome section button & shadow
         #cta-header {
-            margin: 15vh 0 1rem;
+            margin: 10vh 0 1rem;
             @media (max-width: 389px){
                 margin: 12vh 0;
             }
