--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -182,6 +182,7 @@
                         
                     }
 
+                    
 
                     &#intro::first-letter {
                         font-size: 2.5em;
@@ -201,6 +202,10 @@
                         // position: absolute;
                         font-size: 2rem;
                         color: $overlay-blue-light;
+                        &.fa-js {
+                            transform: scale(1.5);
+                            cursor: pointer;
+                        }
                     }
                     // DATA SCROLL
                     &.io-item {
