--- a/css/style.css
+++ b/css/style.css
@@ -3135,7 +3135,8 @@ hamburger
   width: 100%;
 }
 #footer .footer .socialMedia-links .socialMedia-item p {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  margin-bottom: 0.25rem;
   text-transform: capitalize;
   color: #f4f4f4;
   font-weight: 300;
@@ -3237,10 +3238,10 @@ hamburger
   color: #f4f4f4;
 }
 #footer .footer .socialMedia-links .socialMedia-item.codepen a::before {
-  background-image: linear-gradient(0deg, #000, #111);
+  background-image: linear-gradient(0deg, #000, #333);
 }
 #footer .footer .socialMedia-links .socialMedia-item.codepen a::after {
-  background-image: linear-gradient(0deg, #111, #000);
+  background-image: linear-gradient(0deg, #333, #000);
 }
 #footer .footer .socialMedia-links .socialMedia-item.linkedin a {
   background-color: #0074b3;
