--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -219,7 +219,8 @@
                 transition: .3s;
                 width: 100%;
                 p {
-                    font-size: 1.5rem;
+                    font-size: 1.25rem;
+                    margin-bottom: .25rem;
                     text-transform: capitalize;
                     color: $text-light;
                     font-weight: 300;
@@ -319,10 +320,10 @@
                     a {
                         color: #f4f4f4;
                     &::before {
-                        background-image: linear-gradient(0deg, #000, #111);
+                        background-image: linear-gradient(0deg, #000, #333);
                     }
                     &::after {
-                        background-image: linear-gradient(0deg, #111, #000);
+                        background-image: linear-gradient(0deg, #333, #000);
                     }
 
                     }
