--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,7 +61,7 @@ section {
         
     }
     font-weight: 400;
-    color: $overlay-blue-dark;
+    color: $overlay-blue-darker;
     max-width: 100vw;
     margin: 5vh 0 10vh;
     // border: 2px solid red;
