--- a/css/style.css
+++ b/css/style.css
@@ -2767,10 +2767,16 @@ hamburger
   z-index: 2;
   transition: 1.5s;
 }
+.about .col-right .article-container article p .institution {
+  display: block;
+  font-weight: 600;
+  color: #29323c;
+}
 .about .col-right .article-container article p a {
-  background-color: #f4f4f4;
+  background-color: #f7f7f7;
   color: #20262e;
   font-weight: 500;
+  display: inline-block;
 }
 .about .col-right .article-container article p#intro::first-letter {
   font-size: 2.5em;
