--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -175,11 +175,17 @@
                     z-index: 2;
                     transition: 1.5s;
 
+                    .institution{
+                        display: block;
+                        font-weight: 600;
+                        color: $overlay-blue-dark;
+                    }
+
                     a {
-                        background-color: #f4f4f4;
+                        background-color: hsl(0, 0%, 97%);
                         color: $overlay-blue-darker;
                         font-weight: 500;
-                        
+                        display: inline-block;
                     }
 
                     
