about article .school

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -175,7 +175,7 @@
                     z-index: 2;
                     transition: 1.5s;
 
-                    .institution{
+                    .school{
                         display: block;
                         font-weight: 600;
                         color: $overlay-blue-dark;
