--- a/css/style.css
+++ b/css/style.css
@@ -2767,7 +2767,7 @@ hamburger
   z-index: 2;
   transition: 1.5s;
 }
-.about .col-right .article-container article p .institution {
+.about .col-right .article-container article p .school {
   display: block;
   font-weight: 600;
   color: #29323c;
