--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -51,7 +51,7 @@
         p {
             color: $text-light;
             color: $overlay-blue-dark;
-            font-size: 1rem;
+            font-size: .95rem;
             // font-size: 1rem;
             line-height: 1.6;
             @media (min-width: 768px){
