--- a/css/style.css
+++ b/css/style.css
@@ -2426,6 +2426,8 @@ hamburger
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background: #f0f2f4;
+  background: linear-gradient(180deg, #f0f2f4 0%, #f0f2f4 100%);
 }
 #work .work-items .work-item[data-scroll] {
   transform: scale(1) translateY(10vh);
@@ -2466,6 +2468,7 @@ hamburger
   overflow: hidden;
   margin: 1rem auto;
   padding: 0.5rem;
+  border-radius: 0.25rem;
 }
 @media (min-width: 768px) {
   #work .work-items .work-item figure {
@@ -2477,7 +2480,8 @@ hamburger
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
-  object-fit: contain;
+  object-fit: 100%;
+  object-fit: cover;
   transition: 0.3s;
 }
 #work .work-items .work-item .view-site-btn {
