--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -24,6 +24,8 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            background: hsl(211, 16%, 95%);
+            background: linear-gradient(180deg, hsl(211, 16%, 95%) 0%, hsl(211, 16%, 95%) 100%);
             // ITEM BACKGROUND COLORS
 
             // DATA-SCROLL
@@ -73,13 +75,15 @@
                 margin: 1rem auto;
                 // border: 1px solid red;
                 padding: .5rem;
+                border-radius: .25rem;
 
 
                 img {
                     width: 100%;
                     height: 100%;
                     border-radius: .5rem;
-                    object-fit: contain;
+                    object-fit: 100%;
+                    object-fit: cover;
                     transition: .3s;
                 }
             }
