--- a/css/style.css
+++ b/css/style.css
@@ -2241,9 +2241,9 @@ hamburger
   }
 }
 #projects .projects .all-projects .project-item .project-tile h1 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   width: 100%;
-  color: #fff;
+  color: #ead2a1;
   font-weight: 500;
   text-transform: capitalize;
   line-height: 1em;
@@ -2253,9 +2253,9 @@ hamburger
   padding-bottom: 0.5rem;
   border-bottom: 1px dashed #f4f4f4;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   #projects .projects .all-projects .project-item .project-tile h1 {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 }
 #projects .projects .all-projects .project-item .project-tile h2 {
@@ -2293,7 +2293,7 @@ hamburger
   outline: none;
   border-radius: 0.5rem;
   transition: all 0.3s ease;
-  border: 2px solid #ead2a1;
+  border: 1px solid #ead2a1;
 }
 #projects .projects .all-projects .project-item .project-tile a i {
   transition: 0.2s;
