--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -90,12 +90,12 @@
                     transition: 1.3s ease;
                     // project Title (h1)
                     h1 {
-                        font-size: 1.5rem;
+                        font-size: 1.25rem;
                         width: 100%;
-                        @media (min-width:1024px){
-                            font-size: 1.8rem;
+                        color: $span-gold;
+                        @media (min-width: 768px){
+                            font-size: 1.5rem;
                         }
-                        color: #fff;
                         font-weight: 500;
                         text-transform: capitalize;
                         line-height: 1em;
@@ -142,7 +142,7 @@
                         outline: none;
                         border-radius: .5rem;
                         transition: all .3s ease;
-                        border: 2px solid $span-gold;
+                        border: 1px solid $span-gold;
                         // end of project tile box shadow
                         // links icon
                         i {
