--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -112,12 +112,14 @@
                     border: 1px solid $span-gold;
                     padding-left: .2rem;
                     border-radius: .25rem;
+                    overflow: hidden;
                     transition: .2s;
                     // text-shadow: 0 0 5px $text-shadow-red;
 
                     span {
                         margin-left: .1rem;
-                        padding: .05rem .3rem .05rem .3rem;
+                        // padding: .05rem .3rem .05rem .05rem;
+                        padding: 0 .25rem 0 .05rem;
                         background: $span-gold;
                         background: $button-gold;
                         border: none;
