--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,10 @@ hamburger
 }
 #header .hamburger.hamburger::after {
   opacity: 0.8;
-  box-shadow: inset 1px 1px 2px #ddda, inset -1px -1px 2px #000a;
+  box-shadow: inset 1px 1px 2px rgba(222, 222, 222, 0.45), inset -2px -2px 2px rgba(0, 0, 0, 0.45);
 }
 #header .hamburger.hamburger:before {
-  border: 0.15em solid #ead2a1;
+  border: 1px solid #ead2a1;
   opacity: 0;
   animation: ham-pulse 2.5s ease infinite;
 }
