--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -39,13 +39,13 @@ hamburger
     // hamburger box shadow
     &.hamburger::after {
         opacity: .8;
-        box-shadow: inset 1px 1px 2px #ddda,
-                    inset -1px -1px 2px #000a;
+        box-shadow: inset 1px 1px 2px hsla(0, 0%, 87%, 0.450),
+                    inset -2px -2px 2px rgba(0, 0, 0, 0.450);
     }
     // end of hamburger box shadow
     // pulse 
     &.hamburger:before {
-        border: .15em solid $span-gold;
+        border: 1px solid $span-gold;
         opacity: 0;
         animation: ham-pulse 2.5s ease infinite;
         @keyframes ham-pulse {
