--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -52,6 +52,7 @@ $overlay-btn-hover: linear-gradient(0deg , #485563, #20262e );
 $overlay-blue-dark:#29323c;
 $overlay-blue-dark-trans:rgba(34, 41, 49, 0.9);
 $overlay-blue-darker:#20262e;
+$overlay-blue-darkest:hsl(214, 18%, 10%);
 $overlay-blue-light: #485563;
 $nav-background: #29323c;
 $nav-active-background: #1b2127;
