--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,11 @@ hamburger
   z-index: 30;
   isolation: isolate;
 }
+@media (max-width: 768px) {
+  .top-link {
+    display: none;
+  }
+}
 .top-link::before, .top-link::after {
   content: "";
   position: absolute;
@@ -315,6 +320,50 @@ hamburger
   .btn:active::after {
     opacity: 1;
   }
+}
+
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  height: 8vh;
+  width: 100%;
+  background-color: #15191e;
+  z-index: 40;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem 5vw;
+  transform: translateY(15vh);
+  transition: 1s;
+}
+@media (min-width: 768px) {
+  .bottom-nav {
+    display: none;
+  }
+}
+.bottom-nav .link-item {
+  background: #29323c;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  border-radius: 0.25rem;
+  padding: 0.05rem;
+  transition: 0.25s;
+}
+.bottom-nav .link-item i {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #ead2a1;
+}
+.bottom-nav .link-item a {
+  font-size: 0.8rem;
+  text-transform: capitalize;
+  color: #fff;
+}
+.bottom-nav.active-bottom-nav {
+  transform: translateY(0vh);
 }
 
 [data-scroll] {
