--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -690,15 +690,13 @@
     &[data-scroll] {
         transition: 1.5s;
         transform: translateY(-50%);
-        border-color: $overlay-blue-light;
     }
     &[data-scroll="in"] {
         transform: translateY(0);
-        border-color: $brand;
     }
     width: 100%;
     text-align: center;
-    border: 2px solid $brand;
+    border: 2px solid $overlay-blue-dark;
     border-radius: .5rem;
     padding: 5vh 0;
     margin: 0 auto;
