--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -422,6 +422,12 @@ hamburger
             font-size: .6rem;
             text-transform: capitalize;
             color: #fff5;
+            display: grid;
+            place-items: center;
+            i {
+                display: block;
+                margin-bottom: .2rem;
+            }
         }
     }
 
