--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -414,6 +414,7 @@ hamburger
         
         i {
             font-size: 1rem;
+            font-size: 100%;
             font-weight: 700;
             color: $span-gold;
         }
