--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -401,7 +401,7 @@ hamburger
 
     .link-item {
         // border: 1px solid yellow;
-        background: $overlay-blue-dark;
+        background: $overlay-blue-darker;
         width: 100%;
         height: 100%;
         display: grid;
