--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ hamburger
   }
 }
 .bottom-nav .link-item {
-  background: #29323c;
+  background: #20262e;
   width: 100%;
   height: 100%;
   display: grid;
