--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -437,6 +437,24 @@ hamburger
     }
 }
 
+// SKIP LINK
+.skip-link {
+    background: $overlay-blue-light;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: .5rem;
+    color: #f4f4f4;
+    margin: 0 auto;
+    text-transform: capitalize;
+    transition: .5s;
+    transform: translateY(-10vh);
+    &:focus {
+        transform: translateY(0);
+    }
+}
 
 
 
