--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ hamburger
   bottom: 0;
   height: 8vh;
   width: 100%;
-  background-color: #15191e;
+  background: linear-gradient(0deg, #20262e, #29323c);
   z-index: 40;
   display: flex;
   justify-content: space-between;
@@ -343,13 +343,12 @@ hamburger
   }
 }
 .bottom-nav .link-item {
-  background: #20262e;
   width: 100%;
   height: 100%;
   display: grid;
   place-items: center;
+  place-content: center;
   border-radius: 0.25rem;
-  padding: 0.15rem;
   transition: 0.25s;
   position: relative;
 }
@@ -360,7 +359,7 @@ hamburger
   color: #ead2a1;
 }
 .bottom-nav .link-item a {
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   text-transform: capitalize;
   color: #fff7;
   display: grid;
