--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -389,7 +389,7 @@ hamburger
     bottom: 0;
     height: 8vh;
     width: 100%;
-    background-color: $overlay-blue-darkest;
+    background: $overlay-footer;
     z-index: 40;
     display: flex;
     justify-content: space-between;
@@ -401,13 +401,14 @@ hamburger
 
     .link-item {
         // border: 1px solid yellow;
-        background: $overlay-blue-darker;
+        // background: $overlay-blue-darker;
         width: 100%;
         height: 100%;
         display: grid;
         place-items: center;
+        place-content: center;
         border-radius: .25rem;
-        padding: .15rem;
+        // padding: .15rem;
         // opacity: .5;
         transition: .25s;
         position: relative;
@@ -420,7 +421,7 @@ hamburger
         }
 
         a {
-            font-size: .9rem;
+            font-size: .85rem;
             text-transform: capitalize;
             color: #fff7;
             display: grid;
