--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -57,6 +57,8 @@ $overlay-blue-light: #485563;
 $nav-background: #29323c;
 $nav-active-background: #1b2127;
 $ul-background: #1f1e1e;
+$overlay-footer: linear-gradient(0deg, #20262e, #29323c);
+
 // button colors
 $button-background-grey: #8584844b;
 $button-crimson: linear-gradient(0deg, #3f0d0d, #dc134c);
