--- a/css/style.css
+++ b/css/style.css
@@ -2515,6 +2515,12 @@ hamburger
   font-size: 1.5rem;
   color: #29323c;
   margin-bottom: 0.5rem;
+  line-height: 1.3;
+}
+@media (min-width: 768px) {
+  #work .work-items .work-item .work-title h2 br {
+    display: none;
+  }
 }
 #work .work-items .work-item .work-title p {
   color: #485563;
