--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -45,6 +45,12 @@
                     font-size: 1.5rem;
                     color:$overlay-blue-dark;
                     margin-bottom: .5rem;
+                    line-height: 1.3;
+                    @media (min-width: 768px) {
+                        br {
+                            display: none;
+                        }
+                    }
                 }
                 
                 p {
