--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -442,6 +442,7 @@ hamburger
 .skip-link {
     background: $overlay-blue-light;
     position: fixed;
+    z-index: 99;
     top: 0;
     left: 0;
     right: 0;
