--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -52,12 +52,13 @@ $overlay-btn-hover: linear-gradient(0deg , #485563, #20262e );
 $overlay-blue-dark:#29323c;
 $overlay-blue-dark-trans:rgba(34, 41, 49, 0.9);
 $overlay-blue-darker:#20262e;
-$overlay-blue-darkest:hsl(214, 18%, 10%);
+$overlay-blue-darkest:#15191e;
 $overlay-blue-light: #485563;
 $nav-background: #29323c;
 $nav-active-background: #1b2127;
 $ul-background: #1f1e1e;
 $overlay-footer: linear-gradient(0deg, #20262e, #29323c);
+$overlay-footer: linear-gradient(0deg, #15191e, #20262e);
 
 // button colors
 $button-background-grey: #8584844b;
