--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -294,6 +294,9 @@
                                 &:nth-child(3) {
                                     transition-delay: 1.4s;
                                 }
+                                &:nth-child(4) {
+                                    transition-delay: 1.6s;
+                                }
                             }
                         }
                     }
