--- a/css/style.css
+++ b/css/style.css
@@ -741,6 +741,9 @@ hamburger
   #header .header #navbar .nav-list .links-container.active .contact-links a:nth-child(3) {
     transition-delay: 1.4s;
   }
+  #header .header #navbar .nav-list .links-container.active .contact-links a:nth-child(4) {
+    transition-delay: 1.6s;
+  }
 }
 #header .header #navbar .nav-list .links-container .nav-logo {
   margin: 0.5rem 5vw 1rem;
@@ -2513,10 +2516,13 @@ hamburger
   text-transform: capitalize;
   font-family: "Kanit", sans-serif;
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   color: #29323c;
   margin-bottom: 0.5rem;
   line-height: 1.3;
+}
+#work .work-items .work-item .work-title h2 br {
+  display: none;
 }
 @media (min-width: 768px) {
   #work .work-items .work-item .work-title h2 br {
